--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Yukari Consultoria Financeira</title>
+    <title> Yukari - Consultoria Financeira</title>
 
     <meta name="title" content="Camila Yukari | Consultoria Financeira: Otimização e Hiperautomação com Engenharia">
 <meta name="description" content="Engenheira Green Belt e especialista em RPA aplicando Lean e BPMN para otimizar seus processos financeiros com precisão técnica.">
@@ -39,7 +39,6 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="#home">
-                <h4 style="color: #64b5f6; font-weight: 700;">Camila Yukari Consultoria</h4>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -63,7 +62,7 @@
                     <a class="ud-menu-scroll" href="#pricing">Planos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#team">Mentor</a>
+                    <a class="ud-menu-scroll" href="#team">Mentora</a>
                   </li>
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#testimonials">Resultados</a>
@@ -620,7 +619,7 @@
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
               <div class="ud-team-image-wrapper">
                 <div class="ud-team-image">
-                  <img src="assets/images/team/team-01.png" alt="Camila Yukari Mentor" />
+                  <img src="assets/images/team/team-01.png" alt="Camila Yukari Mentora" />
                   </div>
 
                 <img
