--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yukari - Consultoria Financeira PF e PJ</title>
+    <title>Yukari - Consultoria Financeira</title>
 
     <meta name="title" content="Camila Yukari | Consultoria Financeira: PF, PJ e Empreendedores">
     <meta name="description" content="Consultoria financeira para organizar finanças pessoais, empresariais e ajudar quem mistura as contas de casa com as do negócio.">
